--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,21 +1,32 @@
-FROM golang:1.21-alpine as builder
+FROM golang:1.22-alpine AS builder
 
-WORKDIR /app
+ENV CGO_ENABLED=0 \
+	GOOS=linux \
+	GOARCH=amd64
 
-COPY go.mod go.sum ./
+WORKDIR /app/gateway
+
+# Copy module files for the gateway service (repo-root context)
+COPY gateway-service/go.mod gateway-service/go.sum ./
 RUN go mod download
 
-COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o gateway .
+# Copy gateway service sources
+COPY gateway-service/. ./
 
-FROM alpine:latest
+# Build a small, stripped binary.
+RUN go build -v -trimpath -ldflags="-s -w" -o /gateway ./
 
-RUN apk --no-cache add ca-certificates
+FROM alpine:3.22 AS runtime
+RUN addgroup -S app && adduser -S -G app app \
+	&& apk add --no-cache ca-certificates \
+	&& update-ca-certificates || true
 
-WORKDIR /root/
+COPY --from=builder /gateway /usr/local/bin/gateway
 
-COPY --from=builder /app/gateway .
+USER app
 
 EXPOSE 8080
 
-CMD ["./gateway"]
+ENV GIN_MODE=release
+
+ENTRYPOINT ["/usr/local/bin/gateway"]
