--- a/app-service/package.json
+++ b/app-service/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "build": "tsc",
+    "build": "node build.js",
     "start": "node dist/index.js",
     "watch": "tsc --watch"
   },
@@ -26,6 +26,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
     "@types/uuid": "^9.0.7",
+    "esbuild": "^0.27.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.2"
   }
