--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "build": "tsc",
+    "build": "node build.js",
     "start": "node dist/index.js",
     "watch": "tsc --watch"
   },
@@ -17,11 +17,12 @@
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0",
     "@types/jsonwebtoken": "^9.0.7",
-    "typescript": "^5.3.2",
+    "@types/node": "^20.10.0",
+    "esbuild": "^0.27.1",
     "ts-node": "^10.9.2",
-    "@types/bcryptjs": "^2.4.6"
+    "typescript": "^5.3.2"
   }
 }
