--- a/worker-service/package.json
+++ b/worker-service/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "build": "tsc",
+    "build": "node build.js",
     "start": "node dist/index.js",
     "watch": "tsc --watch"
   },
@@ -18,7 +18,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.2",
-    "ts-node": "^10.9.2"
+    "esbuild": "^0.27.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.2"
   }
 }
