Update auth-service secret template - Align secret configuration with deployment requirements

--- a/helm/auth-service/templates/secret.yaml
+++ b/helm/auth-service/templates/secret.yaml
@@ -6,8 +6,8 @@ metadata:
     app: auth-service
 type: Opaque
 data:
-  MONGODB_URI: {{ .Values.env.mongo.uri | b64enc | quote}}
-  JWT_SECRET: {{ .Values.env.jwt.secret | b64enc | quote }}
-  JWT_REFRESH_SECRET: {{ .Values.env.jwt.refreshSecret | b64enc | quote }}
-  JWT_ACCESS_EXPIRE: {{ .Values.env.jwt.accessExpire | b64enc | quote }}
-  JWT_REFRESH_EXPIRE: {{ .Values.env.jwt.refreshExpire | b64enc | quote }}
+  MONGODB_URI: {{ .Values.secrets.mongo.uri | b64enc | quote}}
+  JWT_SECRET: {{ .Values.secrets.jwt.secret | b64enc | quote }}
+  JWT_REFRESH_SECRET: {{ .Values.secrets.jwt.refreshSecret | b64enc | quote }}
+  JWT_ACCESS_EXPIRE: {{ .Values.secrets.jwt.accessExpire | b64enc | quote }}
+  JWT_REFRESH_EXPIRE: {{ .Values.secrets.jwt.refreshExpire | b64enc | quote }}
