--- a/helm/worker-service/templates/secret.yaml
+++ b/helm/worker-service/templates/secret.yaml
@@ -7,11 +7,9 @@ metadata:
     chart: {{ .Chart.Name }}
 type: Opaque
 data:
-  MONGODB_URI: {{ .Values.env.mongo.uri | b64enc | quote }}
-  REDIS_PASSWORD: {{ .Values.env.redis.password | b64enc | quote }}
-  REDIS_HOST: {{ .Values.env.redis.host | b64enc | quote }}
-  REDIS_PORT: {{ .Values.env.redis.port | b64enc | quote }}
-  AWS_ACCESS_KEY_ID: {{ .Values.env.aws.accessKeyId | b64enc | quote }}
-  AWS_SECRET_ACCESS_KEY: {{ .Values.env.aws.secretAccessKey | b64enc | quote }}
-  AWS_REGION: {{ .Values.env.aws.region | b64enc | quote }}
-  AWS_S3_BUCKET: {{ .Values.env.aws.s3Bucket | b64enc | quote }}
+  MONGODB_URI: {{ .Values.secrets.mongo.uri | b64enc | quote }}
+  REDIS_PASSWORD: {{ .Values.secrets.redis.password | b64enc | quote }}
+  AWS_ACCESS_KEY_ID: {{ .Values.secrets.aws.accessKeyId | b64enc | quote }}
+  AWS_SECRET_ACCESS_KEY: {{ .Values.secrets.aws.secretAccessKey | b64enc | quote }}
+  AWS_REGION: {{ .Values.secrets.aws.region | b64enc | quote }}
+  AWS_S3_BUCKET: {{ .Values.secrets.aws.s3Bucket | b64enc | quote }}
