fix: fiexed namespaces

--- a/helm/namespace.yaml
+++ b/helm/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: image-app
+  name: microservices
   labels: 
-    name: image-app
+    name: microservices
     environment: production
