--- a/helm/values/redis.yaml
+++ b/helm/values/redis.yaml
@@ -5,7 +5,7 @@ master:
   persistence:
     enabled: true
     size: 512Mi
-    storageClass: ""
+    storageClass: "gp2"
   resources:
     requests:
       memory: 256Mi
@@ -19,7 +19,7 @@ replica:
   persistence:
     enabled: true
     size: 512Mi
-    storageClass: ""
+    storageClass: "gp2"
   resources:
     requests:
       memory: 256Mi
